2006-06-15  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/DisplayTabs/__init__.py: Import new module.
	* src/DisplayTabs/_TextTab.py: Add new module.
	* src/Editors/_EditSourceRef.py (_setup_fields): Remove Text tab;
	(_create_tabbed_pages): Add Text tab.
	* src/glade/gramps.glade (source_ref_edit): Remove Text tab.
	* src/GrampsDb/_WriteGedcom.py (write_photo): Typo.
	* src/Exporter.py (build_options): Correctly shift all pages.

2006-06-14  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: check for null model
	* src/GrampsDb/_ReadGedcom.py: fix INT date format

2006-06-14  Alex Roitman  <shura@gramps-project.org>
	* src/NameDisplay.py: Factor out commont code.
	* src/Editors/_EditName.py (_setup_fields): Remove Default item.
	* src/RelLib/_Name.py (Name.DEF): Replace with CUSTOM, use LNFN in
	place of previous DEF.
	* src/GrampsCfg.py (add_name_panel): Add Name Display panel.
	* src/GrampsDb/_ReadXML.py (stop_name): Properly set name type;
	do not set conf attribute on attr, addr, and event.

2006-06-13  Brian Matherly  <brian@gramps-project.org>
	* src/PluginUtils/_Plugins.py: pass dbstate to report

2006-06-13  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditLdsOrd.py: LDS confirmation support
	* src/GrampsDb/_ReadGedcom.py: LDS confirmation support
	* src/GrampsDb/_WriteGedcom.py: LDS confirmation support
	* src/GrampsDb/_GedTokens.py: LDS confirmation support
	* src/GrampsDb/_LdsOrdd.py: LDS confirmation support

2006-06-13  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Avoid using
	secondary index when upgrading events; manually resolve duplicate IDs.

2006-06-12  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: use Mime instead of GrampsMime

2006-06-11  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix event parsing
	* src/GramspDb/_GedcomInfo.py: fix ORDN identification
